[gd_scene load_steps=4 format=3 uid="uid://dlw8f7lveseg3"]

[ext_resource type="Script" path="res://password.gd" id="1_qt5dw"]
[ext_resource type="PackedScene" uid="uid://be6xfc1k75axq" path="res://count_2.tscn" id="2_j6ppk"]
[ext_resource type="PackedScene" uid="uid://njoknwet2k77" path="res://win.tscn" id="3_5adrq"]

[node name="password" type="Node2D"]
script = ExtResource("1_qt5dw")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 18.0
offset_top = -5.0
offset_right = 804.0
offset_bottom = 471.0
color = Color(0.505344, 0.505344, 0.505344, 1)

[node name="Gpasss" type="LineEdit" parent="."]
offset_left = 277.0
offset_top = 216.0
offset_right = 504.0
offset_bottom = 281.0
placeholder_text = "Type Here"

[node name="K1" type="Label" parent="."]
offset_left = 191.0
offset_top = 118.0
offset_right = 568.0
offset_bottom = 187.0
theme_override_font_sizes/font_size = 50
text = "Enter password:"

[node name="Sub" type="Button" parent="."]
offset_left = 303.0
offset_top = 315.0
offset_right = 468.0
offset_bottom = 372.0
text = "Enter"

[node name="S1" type="ColorRect" parent="."]
visible = false
offset_left = 163.0
offset_top = 130.0
offset_right = 679.0
offset_bottom = 328.0
color = Color(0.870588, 0.231373, 0.235294, 1)

[node name="S2" type="Label" parent="."]
visible = false
offset_left = 187.0
offset_top = 157.0
offset_right = 653.0
offset_bottom = 294.0
theme_override_font_sizes/font_size = 100
text = "Incorrect!"

[node name="S3" type="ColorRect" parent="."]
visible = false
offset_left = 163.0
offset_top = 130.0
offset_right = 679.0
offset_bottom = 328.0
color = Color(0.231373, 0.564706, 0.235294, 1)

[node name="S4" type="Label" parent="."]
visible = false
offset_left = 227.0
offset_top = 157.0
offset_right = 693.0
offset_bottom = 294.0
theme_override_font_sizes/font_size = 100
text = "Correct!"

[node name="Timer3" type="Timer" parent="."]

[node name="count2" parent="." instance=ExtResource("2_j6ppk")]

[node name="win" parent="." instance=ExtResource("3_5adrq")]

[connection signal="f" from="." to="." method="_on_f"]
[connection signal="text_submitted" from="Gpasss" to="." method="_on_gpasss_text_submitted"]
[connection signal="pressed" from="Sub" to="." method="_on_sub_pressed"]
[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
